src/test/ui/parser/if-attrs/deny-if-attr-validation.stderr
error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:3:9
   |
LL |     bar(#[cfg(FALSE)] if true {});
   |         ^^^^^^^^^^^^^

error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:9:5
   |
LL |     #[cfg(FALSE)]
   |     ^^^^^^^^^^^^^

error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:12:5
   |
LL |     #[cfg_attr(FALSE, allow(warnings))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:15:5
   |
LL |     #[allow(warnings)] if true {}
   |     ^^^^^^^^^^^^^^^^^^

error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:20:5
   |
LL |     #[allow(warnings)] if let Some(_) = Some(true) {
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

